--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/main.css" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="top-nav">
+    <nav>
+        <ul>
+            <li>The A.V. Club</li>
+            <li>DeadSpin</li>
+            <li>Gizmodo</li>
+            <li>Jalopnik</li>
+            <li>Jezebel</li>
+            <li>Kotaku</li>
+            <li>Quartz</li>
+            <li>The Takeout</li>
+            <li>The Onion</li>
+            <li>The Inventory</li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container">
+  <nav class="bottom-nav">
+    <ul>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+    </ul>
+  </nav>
+</div>
 </body>
 </html>
