--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-nav">
     <nav>
         <ul>
-            <li>The A.V. Club</li>
+            <li><a href="https://www.avclub.com/"></a>The A.V. Club</li>
             <li>DeadSpin</li>
             <li>Gizmodo</li>
             <li>Jalopnik</li>
