top nav bar complete

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/main.css" rel="stylesheet"> 
-    <title>Document</title>
+    <title>Jalopnik</title>
 </head>
 <body>
     <div class="top-nav">
     <nav>
         <ul>
-            <li><a href="https://www.avclub.com/"></a>The A.V. Club</li>
-            <li>DeadSpin</li>
-            <li>Gizmodo</li>
-            <li>Jalopnik</li>
-            <li>Jezebel</li>
-            <li>Kotaku</li>
-            <li>Quartz</li>
-            <li>The Takeout</li>
-            <li>The Onion</li>
-            <li>The Inventory</li>
+            <li><a href="https://www.avclub.com/">The A.V. Club</a></li>
+            <li></li><a href="https://www.deadspin.com/">Deadspin</a></li>
+            <li><a href="https://www.gizmodo.com/">Gizmodo</a></li>
+            <li><a href="https://www.jalopnik.com/">Jalopnik</a></li>
+            <li><a href="https://www.jezebel.com/">Jezebel</a></li>
+            <li><a href="https://www.kotaku.com/">Kotaku</a></li>
+            <li><a href="https://www.quartz.com/">Quartz</a></li>
+            <li><a href="https://www.thetakeout.com/">The Takeout</a></li>
+            <li><a href="https://www.theonion.com/">The Onion</a></li>
+            <li><a href="https://www.theinventory.com/">The Inventory</a></li>
         </ul>
       </nav>
     </div>
