--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
         </ul>
       </nav>
     </div>
-    <div class="container">
-    <svg xmlns="http://www.w3.org/2000/svg" width="228" height="33" aria-label="Jalopnik logo" viewBox="0 0 228 33"><path fill="#FF4D00" fill-rule="evenodd" d="M140.98 21.96c-3.23 2.58-8.28 2.8-8.28 2.8a59 59 0 0 1-3.2.08l-.74 7.6h-12.98l3.03-30.75.12-1.4 1.32.01h12.3c.72 0 1.9.03 2.62.06 0 0 4.97.23 7.68 2.8 1.97 1.86 2.95 4.47 2.92 7.78 0 .52-.04 1.05-.09 1.6-.4 4.09-1.99 7.26-4.7 9.42zM78.46 32.43H62.8a16 16 0 0 1-2.58-.26s-2.13-.44-3.27-1.71a6.11 6.11 0 0 1-1.54-4.2v-.2l.17-1.73L57.94.3h12.98L69.1 18.82h10.7l-1.34 13.62zM38.88 16.38l-3.83 16.07H20.27L35.05.32h11.08l8.47 32.13H39.56l-.68-16.07zM9.57 32.36c-.53 0-1.9.07-2.61.07H0L1.36 18.8h7.03c.72 0 1.37-.6 1.44-1.31L11.53.3h12.95l-1.8 18.53c-.08.72-.3 1.88-.48 2.58 0 0-1.45 10.89-12.63 10.95zM228 .31l-13 16.02 9.87 16.11h-30.69L197.33.31H228zm-62.79 32.13l-5.56-9.03-.92 9.03h-12.95L148.93.3h11.4l5.54 9.05.4-3.97.49-5.08h12.95l-3.14 32.14H165.2zM115.9 16.4c-.3 9.11-8.37 16.54-18.02 16.6-9.65.06-17.22-7.29-16.92-16.4C81.26 7.5 89.33.06 98.98 0c9.65-.06 17.22 7.29 16.92 16.4zm63.23 16.02L182.32.28h12.47l-3.19 32.15h-12.47z"></path></svg>
-    <div class="bottom-nav">
-    <ul>
-        <li>home</li>
-        <li>latest</li>
-        <li>reviews</li>
-        <li>unpaved</li>
-        <li>buying</li>
-        <li>tech</li>
-        <li>culture</li>
-        <li>trucks</li>
-        <li>wrenching</li>
-        <li>racing</li>
-    </ul>
-  </div>
-  </nav>
+    <header>
+    <div class="header-mid">
+      <svg xmlns="http://www.w3.org/2000/svg" width="228" height="33" aria-label="Jalopnik logo" viewBox="0 0 228 33"><path fill="#00594F" fill-rule="evenodd" d="M140.98 21.96c-3.23 2.58-8.28 2.8-8.28 2.8a59 59 0 0 1-3.2.08l-.74 7.6h-12.98l3.03-30.75.12-1.4 1.32.01h12.3c.72 0 1.9.03 2.62.06 0 0 4.97.23 7.68 2.8 1.97 1.86 2.95 4.47 2.92 7.78 0 .52-.04 1.05-.09 1.6-.4 4.09-1.99 7.26-4.7 9.42zM78.46 32.43H62.8a16 16 0 0 1-2.58-.26s-2.13-.44-3.27-1.71a6.11 6.11 0 0 1-1.54-4.2v-.2l.17-1.73L57.94.3h12.98L69.1 18.82h10.7l-1.34 13.62zM38.88 16.38l-3.83 16.07H20.27L35.05.32h11.08l8.47 32.13H39.56l-.68-16.07zM9.57 32.36c-.53 0-1.9.07-2.61.07H0L1.36 18.8h7.03c.72 0 1.37-.6 1.44-1.31L11.53.3h12.95l-1.8 18.53c-.08.72-.3 1.88-.48 2.58 0 0-1.45 10.89-12.63 10.95zM228 .31l-13 16.02 9.87 16.11h-30.69L197.33.31H228zm-62.79 32.13l-5.56-9.03-.92 9.03h-12.95L148.93.3h11.4l5.54 9.05.4-3.97.49-5.08h12.95l-3.14 32.14H165.2zM115.9 16.4c-.3 9.11-8.37 16.54-18.02 16.6-9.65.06-17.22-7.29-16.92-16.4C81.26 7.5 89.33.06 98.98 0c9.65-.06 17.22 7.29 16.92 16.4zm63.23 16.02L182.32.28h12.47l-3.19 32.15h-12.47z"></path></svg>
+      <div class="bottom-nav">
+        <nav>
+      <ul>
+          <li>home</li>
+          <li>latest</li>
+          <li>reviews</li>
+          <li>unpaved</li>
+          <li>buying</li>
+          <li>tech</li>
+      </ul>
+    </div>
+    </nav>
+    </div>
+    </header>
+<div class="container">
 </div>
 </body>
 </html>
