changes to css and html

--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
     </div>
     </header>
 <div class="container">
+  <div class="top-conatiner">
   <div class="articles">
     <div class="headline-article">
       <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,g_center,h_542,q_60,w_965/ea31789f468e6e4b96ebb1142cc85081.jpg" alt="oregon woman's quest to get her car back">
       <h1>Oregon Woman's 13-Year Quest to Recover Her Stolen Chevy Nova SS Is Finally Over</h1>
       <h3>It wouldn't have taken as long if the system hadn't failed her at almost every point.</h3>
-      <p>By <b>Collin Woodard</b> | <font color="#ccccc"><b>40 comments</b></font></p>
+      <p>By <b>Collin Woodard</b> <font color="#be2d2d">| </font><font color="grey"><b>40 comments</b></font></p>
     </div>
     <div class="bottom-articles">
 <div class="bottom-1">
-  <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,g_center,h_275,q_60,w_490/d6ba9a227a07592c74b07590931db733.jpg" alt="tacoma silhouette">
+  <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,g_center,h_275,q_60,w_1315/d6ba9a227a07592c74b07590931db733.jpg" alt="tacoma silhouette">
   <h3>2024 Toyota Tacoma Leaks Show Off a Gnarly New 'Taco</h3>
 </div>
 <div class="bottom-2">
@@ -65,6 +66,26 @@
 </div>
     </div>
   </div>
+</div>
+<aside class="latest">
+<h2>Latest</h2>
+<div class="latest-1">
+  <h3>Norfolk Southern Train Derails 20 Miles from Ohio Disaster Site</h3>
+  <p>By Erin Marquis <font color="#be2d2d">| </font><font color="grey"><b>1 comment</b></font></p>
+</div>
+<div class="latest-2">
+  <h3>There's Finally a New Lexus GX on the Way</h3>
+  <p>By Andy Kalmowitz</p>
+</div>
+<div class="latest-3">
+  <h3>I'm Not Impressed With My Subaru Impreza's Horsepower! What Car Should I Buy?</h3>
+  <p>By Tom Mcparland  <font color="#be2d2d">| </font><font color="grey"><b>10 comments</b></font></p>
+</div>
+<div class="latest-4">
+  <h3>Frontier Airlines Damages Pro Tennis Player's Wheelchair</h3>
+  <p>By Ryan Erik King</p>
+</div>
+</aside>
 </div>
 </body>
 </html>
