--- a/index.html
+++ b/index.html
@@ -1,91 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/main.css" rel="stylesheet"> 
-    <title>Jalopnik</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/main.css" rel="stylesheet">
+  <title>Jalopnik</title>
 </head>
+
 <body>
-    <div class="top-nav">
+  <div class="top-nav">
     <nav>
-        <ul>
-            <li><a href="https://www.avclub.com/" class="web-links">The A.V. Club</a></li>
-            <li><a href="https://www.deadspin.com/" class="web-links">Deadspin</a></li>
-            <li><a href="https://www.gizmodo.com/" class="web-links">Gizmodo</a></li>
-            <li><a href="https://www.jalopnik.com/" class="web-links">Jalopnik</a></li>
-            <li><a href="https://www.jezebel.com/" class="web-links">Jezebel</a></li>
-            <li><a href="https://www.kotaku.com/" class="web-links">Kotaku</a></li>
-            <li><a href="https://www.quartz.com/" class="web-links">Quartz</a></li>
-            <li><a href="https://www.thetakeout.com/" class="web-links">The Takeout</a></li>
-            <li><a href="https://www.theonion.com/" class="web-links">The Onion</a></li>
-            <li><a href="https://www.theinventory.com/" class="web-links">The Inventory</a></li>
-        </ul>
-      </nav>
-    </div>
-    <header>
+      <ul>
+        <li><a href="https://www.avclub.com/" class="web-links">The A.V. Club</a></li>
+        <li><a href="https://www.deadspin.com/" class="web-links">Deadspin</a></li>
+        <li><a href="https://www.gizmodo.com/" class="web-links">Gizmodo</a></li>
+        <li><a href="https://www.jalopnik.com/" class="web-links">Jalopnik</a></li>
+        <li><a href="https://www.jezebel.com/" class="web-links">Jezebel</a></li>
+        <li><a href="https://www.kotaku.com/" class="web-links">Kotaku</a></li>
+        <li><a href="https://www.quartz.com/" class="web-links">Quartz</a></li>
+        <li><a href="https://www.thetakeout.com/" class="web-links">The Takeout</a></li>
+        <li><a href="https://www.theonion.com/" class="web-links">The Onion</a></li>
+        <li><a href="https://www.theinventory.com/" class="web-links">The Inventory</a></li>
+      </ul>
+    </nav>
+  </div>
+  <header>
     <div class="header-mid">
-      <svg class="logo" xmlns="http://www.w3.org/2000/svg" width="228" height="33" aria-label="Jalopnik logo" viewBox="0 0 228 33"><path fill="#00594F" fill-rule="evenodd" d="M140.98 21.96c-3.23 2.58-8.28 2.8-8.28 2.8a59 59 0 0 1-3.2.08l-.74 7.6h-12.98l3.03-30.75.12-1.4 1.32.01h12.3c.72 0 1.9.03 2.62.06 0 0 4.97.23 7.68 2.8 1.97 1.86 2.95 4.47 2.92 7.78 0 .52-.04 1.05-.09 1.6-.4 4.09-1.99 7.26-4.7 9.42zM78.46 32.43H62.8a16 16 0 0 1-2.58-.26s-2.13-.44-3.27-1.71a6.11 6.11 0 0 1-1.54-4.2v-.2l.17-1.73L57.94.3h12.98L69.1 18.82h10.7l-1.34 13.62zM38.88 16.38l-3.83 16.07H20.27L35.05.32h11.08l8.47 32.13H39.56l-.68-16.07zM9.57 32.36c-.53 0-1.9.07-2.61.07H0L1.36 18.8h7.03c.72 0 1.37-.6 1.44-1.31L11.53.3h12.95l-1.8 18.53c-.08.72-.3 1.88-.48 2.58 0 0-1.45 10.89-12.63 10.95zM228 .31l-13 16.02 9.87 16.11h-30.69L197.33.31H228zm-62.79 32.13l-5.56-9.03-.92 9.03h-12.95L148.93.3h11.4l5.54 9.05.4-3.97.49-5.08h12.95l-3.14 32.14H165.2zM115.9 16.4c-.3 9.11-8.37 16.54-18.02 16.6-9.65.06-17.22-7.29-16.92-16.4C81.26 7.5 89.33.06 98.98 0c9.65-.06 17.22 7.29 16.92 16.4zm63.23 16.02L182.32.28h12.47l-3.19 32.15h-12.47z"></path></svg>
+      <svg class="logo" xmlns="http://www.w3.org/2000/svg" width="228" height="33" aria-label="Jalopnik logo" viewBox="0 0 228 33">
+        <path fill="#00594F" fill-rule="evenodd" d="M140.98 21.96c-3.23 2.58-8.28 2.8-8.28 2.8a59 59 0 0 1-3.2.08l-.74 7.6h-12.98l3.03-30.75.12-1.4 1.32.01h12.3c.72 0 1.9.03 2.62.06 0 0 4.97.23 7.68 2.8 1.97 1.86 2.95 4.47 2.92 7.78 0 .52-.04 1.05-.09 1.6-.4 4.09-1.99 7.26-4.7 9.42zM78.46 32.43H62.8a16 16 0 0 1-2.58-.26s-2.13-.44-3.27-1.71a6.11 6.11 0 0 1-1.54-4.2v-.2l.17-1.73L57.94.3h12.98L69.1 18.82h10.7l-1.34 13.62zM38.88 16.38l-3.83 16.07H20.27L35.05.32h11.08l8.47 32.13H39.56l-.68-16.07zM9.57 32.36c-.53 0-1.9.07-2.61.07H0L1.36 18.8h7.03c.72 0 1.37-.6 1.44-1.31L11.53.3h12.95l-1.8 18.53c-.08.72-.3 1.88-.48 2.58 0 0-1.45 10.89-12.63 10.95zM228 .31l-13 16.02 9.87 16.11h-30.69L197.33.31H228zm-62.79 32.13l-5.56-9.03-.92 9.03h-12.95L148.93.3h11.4l5.54 9.05.4-3.97.49-5.08h12.95l-3.14 32.14H165.2zM115.9 16.4c-.3 9.11-8.37 16.54-18.02 16.6-9.65.06-17.22-7.29-16.92-16.4C81.26 7.5 89.33.06 98.98 0c9.65-.06 17.22 7.29 16.92 16.4zm63.23 16.02L182.32.28h12.47l-3.19 32.15h-12.47z"></path>
+      </svg>
       <div class="bottom-nav">
         <nav>
-      <ul>
-          <li>home</li>
-          <li>latest</li>
-          <li>reviews</li>
-          <li>unpaved</li>
-          <li>buying</li>
-          <li>tech</li>
-          <li>wrenching</li>
-      </ul>
+          <ul>
+            <li>home</li>
+            <li>latest</li>
+            <li>reviews</li>
+            <li>unpaved</li>
+            <li>buying</li>
+            <li>tech</li>
+            <li>wrenching</li>
+          </ul>
+        </nav>
+      </div>
     </div>
-    </nav>
-    </div>
-    </header>
-<div class="container">
-  <div class="top-conatiner">
-  <div class="articles">
-    <div class="headline-article">
-      <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,g_center,h_542,q_60,w_965/ea31789f468e6e4b96ebb1142cc85081.jpg" alt="oregon woman's quest to get her car back">
-      <h1>Oregon Woman's 13-Year Quest to Recover Her Stolen Chevy Nova SS Is Finally Over</h1>
-      <h3>It wouldn't have taken as long if the system hadn't failed her at almost every point.</h3>
-      <p>By <b>Collin Woodard</b> <font color="#be2d2d">| </font><font color="grey"><b>40 comments</b></font></p>
-    </div>
-    <div class="bottom-articles">
-<div class="bottom-1">
-  <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,f_auto,g_center,h_275,q_60,w_1315/d6ba9a227a07592c74b07590931db733.jpg" alt="tacoma silhouette">
-  <h3>2024 Toyota Tacoma Leaks Show Off a Gnarly New 'Taco</h3>
-</div>
-<div class="bottom-2">
-  <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,g_center,h_275,q_60,w_490/ac03e8eaec91bbb54dd79ba9c223aea3.jpg" alt="neighborhood stop light">
-  <h3>City Tests Traffic Light That Only Turns Green for Drivers Who Obey the Speed Limit</h3>
-</div>
-<div class="bottom-3">
-  <img src="https://i.kinja-img.com/gawker-media/image/upload/c_fill,f_auto,g_center,h_275,q_60,w_490/fb7a88ff9aed7986da95108c1b3c1b8d.jpg" alt="santos bullshit tweet">
-  <h3>When We Caught George Santos Fibbing Before It Became a National Scandal</h3>
-</div>
-    </div>
-  </div>
-</div>
-<aside class="latest">
-<h2>Latest</h2>
-<div class="latest-1">
-  <h3>Norfolk Southern Train Derails 20 Miles from Ohio Disaster Site</h3>
-  <p>By Erin Marquis <font color="#be2d2d">| </font><font color="grey"><b>1 comment</b></font></p>
-</div>
-<div class="latest-2">
-  <h3>There's Finally a New Lexus GX on the Way</h3>
-  <p>By Andy Kalmowitz</p>
-</div>
-<div class="latest-3">
-  <h3>I'm Not Impressed With My Subaru Impreza's Horsepower! What Car Should I Buy?</h3>
-  <p>By Tom Mcparland  <font color="#be2d2d">| </font><font color="grey"><b>10 comments</b></font></p>
-</div>
-<div class="latest-4">
-  <h3>Frontier Airlines Damages Pro Tennis Player's Wheelchair</h3>
-  <p>By Ryan Erik King</p>
-</div>
-</aside>
-</div>
+ <main class="container">
+ </main>
 </body>
 </html>
