top of container done

--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
       </div>
     </div>
  <main class="container">
+  <div class="top-container">
+    <div class="main-article">
+    <img src="./assets/main article.jpg" alt="Chevy Nova SS"/>
+    <h1>Oregon Woman's 13-Year Quest to Recover Her Stolen Chevy Nova SS Is finally Over</h1>
+    <h3>It wouldn't have taken as long if the system hadn't failed her at almost every point</h3>
+   <p>By <b>Colin Woodard</b> <font color="be2d2d">|</font> <font color="#cccccc">39 Comments</font></p> 
+  </div>
+  <aside class="right-side">
+    <div class="latest">
+      <h1>Latest</h1>
+    </div>
+    <div class="latest-text">
+    <div class="1">
+      <h2>What's The Weirdest Car on Sale Right Now?</h2>
+      <p>Weird cars are awesome, and they're coming back. Let us know what your favorite new weird car is.</p>
+      <h4>By <b>Andy Kalmowitz</b> <font color="be2d2d">|</font> <font color="#cccccc">8 Comments</font></h4>
+    </div>
+    <div class="2">
+      <h2>Ford Was Always Going to Go With a Turbo V6 for the Ranger Raptor</h2>
+      <p>The Ranger Raptor's 3.0 liter Ecoboost engine is no V8, but still more than enough.</p>
+      <h4>By <b>Lawrence Hodge</b> <font color="be2d2d">|</font> <font color="#cccccc">4 Comments</font></h4>
+    </div>
+    <div id="3">
+      <h2>The 2024 Hummer EV Omega Edition Is Inspired by Outer Space</h2>
+      <p>A price tag that's out of this world seems fitting for an interstellar-inspired special edition.</p>
+      <h4>By <b>Lawrence Hodge</b> <font color="be2d2d">|</font> <font color="#cccccc">2 Comments</font></h4>
+    </div>
+    <div id="4">
+      <h2>The Oil and Gas Industry's Impact on Health Costs US $77 Billion a Year: Report</h2>
+      <p>Nitrogen Oxide, fine particulate matter and ozone are the largest contributors.</p>
+      <h4>By <b>Collin Woodard</b> <font color="be2d2d">|</font> <font color="#cccccc">2 Comments</font></h4>
+    </div>
+  </div>
+  </aside>
+</div>
+
+
  </main>
 </body>
 </html>
