--- a/index.html
+++ b/index.html
@@ -81,7 +81,20 @@
   </div>
   </aside>
 </div>
-
+<div class="bottom-articles">
+  <div class="article-1">
+<img src="./assets/tacoma.jpg" alt="tacoma silhouette">
+<h3>2024 Toyota Tacoma Leaks Show Off a Gnarly New 'Taco</h3>
+</div>
+<div class="article-2">
+  <img src="./assets/hummer.jpg" alt="hummer ev">
+  <h3>These Are the Cars You Think Should Die</h3>
+  </div>
+  <div class="article-3">
+    <img src="./assets/santos.jpg" alt="santos shit tweet">
+    <h3>We Caught George Santos Fibbing Before It Became a National Scandal</h3>
+    </div>
+</div>
 
  </main>
 </body>
